--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@vicons/utils": "^0.1.4",
     "@vitejs/plugin-vue": "^4.4.0",
     "naive-ui": "^2.35.0",
-    "vite": "^4.4.11"
+    "vite": "^4.4.11",
+    "vite-plugin-pwa": "^0.19.0"
   }
 }
