--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "chart.js": "^4.4.3",
     "vue": "^3.3.4",
+    "vue-chartjs": "^5.3.1",
     "vue-router": "^4.2.5"
   },
   "devDependencies": {
